# Hermes_Challenge

./: pyproject.toml
Datasets/: README.md  classified_ads.csv  classified_ads_post_corr.csv  newspapers_ger_1914_part_1_only_ads.csv  newspapers_ger_1914_part_1_only_ads_REGIONS.csv  regions_error_report.md
notebooks/: .gitignore  Hermes.ipynb  extract_regions.ipynb  gender_in_positions_hermes.ipynb  job_ads_identification_model.joblib  region_classification.ipynb  tfidf_vectorizer.joblib
